--- a/debian/rules
+++ b/debian/rules
@@ -39,9 +39,9 @@ override_dh_auto_install:
 
 	# Move the jmx_ plugin to the munin-plugins-java package
 	# see http://bugs.debian.org/667493
-	mkdir -p $(CURDIR)/debian/munin-plugins-java/usr/share/munin/plugins/
-	mv -v $(CURDIR)/debian/munin-plugins-core/usr/share/munin/plugins/jmx_ \
-		$(CURDIR)/debian/munin-plugins-java/usr/share/munin/plugins/jmx_
+#	mkdir -p $(CURDIR)/debian/munin-plugins-java/usr/share/munin/plugins/
+#	mv -v $(CURDIR)/debian/munin-plugins-core/usr/share/munin/plugins/jmx_ \
+#		$(CURDIR)/debian/munin-plugins-java/usr/share/munin/plugins/jmx_
 
 	# Install apache configuration
 	install -D -m0644 debian/munin.apache.conf \
