--- a/plugins/node.d.linux/df_inode.in
+++ b/plugins/node.d.linux/df_inode.in
@@ -14,7 +14,7 @@ Every Linux system with df installed.
 The plugin excludes per default the following special, read-only or
 dynamically allocating file systems from graphing:
 
-  none unknown iso9660 squashfs udf romfs ramfs vfat debugfs simfs nilfs2 rootfs
+  none unknown iso9660 squashfs udf romfs ramfs vfat debugfs nilfs2 rootfs
 
 To change this set the environment variable "exclude" with a list of
 space separated fs types.  The environment variables "warning" and
@@ -24,7 +24,7 @@ the disk usage.
 This configuration snipplet is an example with the defaults:
 
   [df_inode]
-    env.exclude none unknown iso9660 squashfs udf romfs ramfs vfat debugfs simfs nilfs2 rootfs
+    env.exclude none unknown iso9660 squashfs udf romfs ramfs vfat debugfs nilfs2 rootfs
     env.warning 92
     env.critical 98
 
@@ -85,9 +85,9 @@ use strict;
 use Munin::Plugin;
 
 # For these devices use the mount point, the device is useless
-my %usemntpt = ( tmpfs => 1, none => 1, udev => 1 );
+my %usemntpt = ( tmpfs => 1, none => 1, udev => 1, simfs => 1 );
 
-my $exclude = $ENV{'exclude'} || 'none unknown iso9660 squashfs udf romfs ramfs vfat debugfs simfs nilfs2 rootfs reiserfs';
+my $exclude = $ENV{'exclude'} || 'none unknown iso9660 squashfs udf romfs ramfs vfat debugfs nilfs2 rootfs reiserfs';
 my $dfopts  = "-P -l -i ".join(' -x ',('',split('\s+',$exclude)));
 
 my $mode = ($ARGV[0] or "print");
