munin-cgi-graph: refine the fix for not cached cgi
29f422377e710dfb19cff5a29af2344ae6203203 patched it,
but failed to take the ?0 into account.

Using the patch from debian #683064 is better.

--- a/master/_bin/munin-cgi-graph.in
+++ b/master/_bin/munin-cgi-graph.in
@@ -162,7 +162,7 @@ while (new CGI::Fast) {
     }
 
     # Having some QUERY_STRING disables the cache.
-    if (defined($ENV{QUERY_STRING}) && $ENV{QUERY_STRING}) {
+    if (defined($ENV{QUERY_STRING}) && $ENV{QUERY_STRING} ne "") {
       $no_cache = 1;
     }
 
