graph: cosmetics for no-data to graph
Logs an error if rrd graph fails to generate an image without any error,
probably because there is nothing to graph. (seen with iostat plugin not
returning any data)

munin-cgi-graph better handle it, and does not send two HTTP responses
anymore.

--- a/master/_bin/munin-cgi-graph.in
+++ b/master/_bin/munin-cgi-graph.in
@@ -207,7 +207,7 @@ while (new CGI::Fast) {
 	}
 
 	# Try to generate the graph
-	eval {
+	my $generated_file = eval {
  		draw_graph_or_complain($dom, $host, $serv, $scale_options, $filename);
 	};
 	
@@ -232,7 +232,11 @@ while (new CGI::Fast) {
 			"X-Munin-Pid: $$\r\n",
 			"X-Munin-Request $nb_request/$nb_request_max\r\n",
 			"";
+		next;
 	}
+
+	# draw_graph_or_complain return 0, but already displayed a message
+	next unless ($generated_file);
     }
 
     # Now send it: headers
