--- a/plugins/node.d/http_loadtime.in
+++ b/plugins/node.d/http_loadtime.in
@@ -1,4 +1,4 @@
-#!@@GOODSH@@
+#!@@BASH@@
 # -*- sh -*-
 
 : << =cut
@@ -35,13 +35,10 @@ GPLv2
 =cut
 
 target=${target:-"http://localhost/"}
-time_bin=$(which time)
-wget_bin=$(which wget)
 
 if [ "$1" = "autoconf" ]; then
     result="yes"
-    [ "x$time_bin" = "x" ] && result=1
-    [ "x$wget_bin" = "x" ] && result=2
+    command -v wget 2>/dev/null || result=1
     if [ "$result" != "yes" ]; then
     	echo "no (need time and wget programs)"
 	    exit 0
@@ -70,7 +67,7 @@ TMPDIR=`mktemp -d` || exit 1
 trap "rm -rf $TMPDIR" EXIT
 
 cd $TMPDIR || exit 1
-loadtime=$($time_bin -p $wget_bin -p --no-cache --delete-after $target -q 2>&1 | awk '/^real / { print $2 }')
+loadtime=$(time -p wget -p --no-cache --delete-after $target -q 2>&1 | awk '/^real / { print $2 }')
 cd ..
 
 echo "loadtime.value $loadtime"
