adding some comments for HTML cron vs cgi

--- a/master/_bin/munin-cron.in
+++ b/master/_bin/munin-cron.in
@@ -11,9 +11,10 @@
 
 @@LIBDIR@@/munin-limits $@ 
 
+# We always launch munin-html.
+# It is a noop if html_strategy is "cgi"
 nice @@LIBDIR@@/munin-html $@ || exit 1
 
-# Now the result of munin-html is needed for munin-graph.
-# It is always lauched, but will be a noop if 
-# graph_strategy is "cgi" 
-nice @@LIBDIR@@/munin-graph $@ || exit 1
+# The result of munin-html is needed for munin-graph.
+# It is a noop if graph_strategy is "cgi"
+nice @@LIBDIR@@/munin-graph --cron $@ || exit 1
