munin-cgi-html: update timestamp when running for a while
When cgi is running a while, and serving different pages, it now updates
timestamp, instead of showing the cgi launch time.

--- a/master/_bin/munin-cgi-html.in
+++ b/master/_bin/munin-cgi-html.in
@@ -84,6 +84,7 @@ sub emit_page {
   #process groups
   $group = traverse_groups($path, $group);
  
+  update_timestamp();
   if(!defined $group->{"depth"} || $group->{"depth"} == 0){ #root url
 	my $problems = get_next_part($path);
 	if(defined $problems && $problems eq "problems.html"){
